# projetfinal

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/clean/: cleaned_data.csv
data/clean/.ipynb_checkpoints/: cleaned_data2-checkpoint.csv
notebooks/: EDA.ipynb  cleaning_data.ipynb  ml_prediction.ipynb  sql.ipynb
static/: styles.css
templates/: index.html  layout.html  showdata.html  statistics.html
