[project]
name = "projetfinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.2",
    "imbalanced-learn>=0.12.3",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.35",
    "python-dotenv",
    "flask>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
